<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2010 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
<resources>
    <string name="app_name">Calevent</string>
    <string name="app_label">Calevent</string>
    <string name="search_hint">Search events</string>
    <string name="camera_sample">Camera Example</string>
    <string name="calendar_sample">Calendar Example</string>
    <string name="settings">Settings</string>
    <string name="clip_label">Clip Label</string>

    <string name="app_widget_name">Calevent Widget</string>
    <string name="widget_empty_view_text">Touch to show data</string>

    <string name="notification_text">Example notification text</string>

    <string name="photo_selection_cab_title">Photo selection</string>
    <string name='theme_holo_light'>Android Holo Light</string>
    <string name='theme_holo_dark'>Android Holo Dark</string>

    <!-- Menu strings -->
    <string name="share">Share</string>
    <string name="camera">Camera</string>
    <string name="toggle_titles">Toggle Titles</string>
    <string name="day_night">Day/Night</string>
    <string name="show_dialog">Show a dialog</string>
    <string name="basic_notification">Show a basic notification</string>
    <string name="custom_notification">Show a custom notification</string>
    <string name="switch_camera">Switch camera</string>
    <string name="menu_refresh">Refresh</string> 
    <string name="menu_search">Search</string> 
    <string name="menu_share">Share</string> 
    <string name="menu_calendar">Calendar</string> 
    <string name="menu_filter">Filter</string> 
    <string name="menu_settings">Settings</string> 
    <string name="menu_about">About</string> 
    
    <!-- Content menu strings -->
    <string name="text_view_event_name">Name of the event</string>
    <string name="text_view_event_description">Description of the event</string>
    <string name="text_view_event_location_label">Location</string>
    <string name="text_view_event_location">Location of the event</string>
    <string name="text_view_event_location_city_label">City</string>
    <string name="text_view_event_location_city">City of the event</string>
    <string name="text_view_event_location_address_label">Address</string>
    <string name="text_view_event_location_address">Address of the event</string>
    <string name="text_view_event_start_label">Time</string>
    <string name="text_view_event_start">Time of the event</string>
    <string name="text_view_event_contact_label">Contact</string>
    <string name="text_view_event_contact">Contact of the event</string>
    <string name="text_view_event_pictures">Pictures</string>
    
    <!-- Filter menu strings -->  
    <string name="filter_dialog_title">Filter</string>    
    <string name="text_view_location">Choose a location</string>
    <string name="text_view_category">Choose categories</string>
    <string name="text_view_date">Choose a date</string>
    <string name="text_view_date_display"></string>
    <string name="checkbox_category_culture">Culture</string>
    <string name="checkbox_category_party">Party</string>
    <string name="checkbox_category_eat">Eating</string>
    
    <string name="location_prompt">Choose a location</string>
    <string-array name="locations_array">
        <item>Bonn</item>
        <item>Cologne</item>
        <item>Munich</item>
        <item>Berlin</item>
        <item>Hamburg</item>
        <item>Francfurt</item>
    </string-array>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_pick_date">Choose a date</string>
    
     <!-- Settings menu strings -->
     <string name="text_view_theme">Choose a theme</string>
     <string name="text_view_language">Choose language</string>
     
     <string name="theme_prompt">Choose a theme</string>
     <string-array name="theme_array">
        <item>Android Holo Light</item>
        <item>Android Holo Dark</item>
     </string-array>
     
     <string name="language_prompt">Choose a language</string>
     <string-array name="language_array">
        <item>English</item>
        <item>German</item>
     </string-array>
    
</resources>