<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view_filter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_root_filter"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/text_view_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_location" />

        <Spinner
            android:id="@+id/spinner_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/location_prompt" />

        <TextView
            android:id="@+id/text_view_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_category" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <CheckBox
                android:id="@+id/checkbox_category_culture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkbox_category_culture" />

            <CheckBox
                android:id="@+id/checkbox_category_party"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkbox_category_party" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkbox_category_eat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkbox_category_eat" />

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_date" />

        <TextView
            android:id="@+id/text_view_date_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_date_display" />

        <Button
            android:id="@+id/button_pick_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_pick_date" />

    </LinearLayout>

</ScrollView>