<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view_content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1" >

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/text_view_event_name" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/text_view_event_description" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/text_view_event_location_label" />

            <TextView
                android:id="@+id/text_view_event_location"
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/text_view_event_location" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/text_view_event_location_city_label" />

            <TextView
                android:id="@+id/text_view_event_location_city"
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/text_view_event_location_city" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/text_view_event_location_address_label" />

            <TextView
                android:id="@+id/text_view_event_location_address"
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/text_view_event_location_address" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/text_view_event_start_label" />

            <TextView
                android:id="@+id/text_view_event_start"
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/text_view_event_start" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/text_view_event_contact_label" />

            <TextView
                android:id="@+id/text_view_event_location_address"
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/text_view_event_contact" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/text_view_event_pictures" />
        </TableRow>

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/picture_frame"
            android:duplicateParentState="true" />

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/button_add_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="?attr/menuIconEvent" />

            <ImageButton
                android:id="@+id/button_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="?attr/menuIconFilter" />

            <ImageButton
                android:id="@+id/button_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="?attr/menuIconFavorite" />

            <ImageButton
                android:id="@+id/button_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="?attr/menuIconShare" />
        </LinearLayout>
        
    </TableLayout>

</ScrollView>