<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view_settings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1" >

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/text_view_theme" />

            <Spinner
                android:id="@+id/spinner_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/theme_prompt" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/text_view_language" />

            <Spinner
                android:id="@+id/spinner_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/language_prompt" />
        </TableRow>
    </TableLayout>

</ScrollView>